src/main/gen/opwvhk/intellij/avro_idl/syntax/AvroIdlParser.java
// This is a generated file. Not intended for manual editing.
package opwvhk.intellij.avro_idl.syntax;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static opwvhk.intellij.avro_idl.psi.AvroIdlTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class AvroIdlParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return CompilationUnit(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(NAMESPACE_PROPERTY, SCHEMA_PROPERTY),
    create_token_set_(DOCUMENTATION, MISPLACED_DOCUMENTATION),
    create_token_set_(JSON_STRING_LITERAL, JSON_VALUE),
    create_token_set_(ARRAY_TYPE, DECIMAL_TYPE, ENUM_DECLARATION, FIXED_DECLARATION,
      MAP_TYPE, MESSAGE_DECLARATION, NAMED_SCHEMA_DECLARATION, NULLABLE_TYPE,
      PRIMITIVE_TYPE, PROTOCOL_DECLARATION, RECORD_DECLARATION, REFERENCE_TYPE,
      RESULT_TYPE, TYPE, UNION_TYPE, VARIABLE_DECLARATOR),
  };

  /* ********************************************************** */
  // LEFT_ANGLE Type RIGHT_ANGLE
  static boolean AngleType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AngleType")) return false;
    if (!nextTokenIs(b, LEFT_ANGLE)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, LEFT_ANGLE);
    p = r; // pin = 1
    r = r && report_error_(b, Type(b, l + 1));
    r = p && consumeToken(b, RIGHT_ANGLE) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ArrayType1 | ArrayType2
  public static boolean ArrayType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARRAY_TYPE, "<array type>");
    r = ArrayType1(b, l + 1);
    if (!r) r = ArrayType2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SchemaProperty+ ArrayType2
  static boolean ArrayType1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayType1")) return false;
    if (!nextTokenIs(b, "", AT, AT_NAMESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ArrayType1_0(b, l + 1);
    r = r && ArrayType2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SchemaProperty+
  private static boolean ArrayType1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayType1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SchemaProperty(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!SchemaProperty(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ArrayType1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ARRAY AngleType
  static boolean ArrayType2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayType2")) return false;
    if (!nextTokenIs(b, ARRAY)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, ARRAY);
    p = r; // pin = 1
    r = r && AngleType(b, l + 1);
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // ProtocolDeclaration
  static boolean CompilationUnit(PsiBuilder b, int l) {
    return ProtocolDeclaration(b, l + 1);
  }

  /* ********************************************************** */
  // DecimalType1 | DecimalType2
  public static boolean DecimalType(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, DECIMAL_TYPE, "<decimal type>");
    r = DecimalType1(b, l + 1);
    if (!r) r = DecimalType2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // SchemaProperty+ DecimalType2
  static boolean DecimalType1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType1")) return false;
    if (!nextTokenIs(b, "", AT, AT_NAMESPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = DecimalType1_0(b, l + 1);
    r = r && DecimalType2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // SchemaProperty+
  private static boolean DecimalType1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = SchemaProperty(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!SchemaProperty(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DecimalType1_0", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // DECIMAL MisplacedDocumentation* LEFT_PAREN MisplacedDocumentation* INT_LITERAL MisplacedDocumentation* COMMA
  //   MisplacedDocumentation* INT_LITERAL MisplacedDocumentation* RIGHT_PAREN
  static boolean DecimalType2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType2")) return false;
    if (!nextTokenIs(b, DECIMAL)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_);
    r = consumeToken(b, DECIMAL);
    p = r; // pin = 1
    r = r && report_error_(b, DecimalType2_1(b, l + 1));
    r = p && report_error_(b, consumeToken(b, LEFT_PAREN)) && r;
    r = p && report_error_(b, DecimalType2_3(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, INT_LITERAL)) && r;
    r = p && report_error_(b, DecimalType2_5(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, COMMA)) && r;
    r = p && report_error_(b, DecimalType2_7(b, l + 1)) && r;
    r = p && report_error_(b, consumeToken(b, INT_LITERAL)) && r;
    r = p && report_error_(b, DecimalType2_9(b, l + 1)) && r;
    r = p && consumeToken(b, RIGHT_PAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // MisplacedDocumentation*
  private static boolean DecimalType2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType2_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DecimalType2_1", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean DecimalType2_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType2_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DecimalType2_3", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean DecimalType2_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType2_5")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DecimalType2_5", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean DecimalType2_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType2_7")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DecimalType2_7", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean DecimalType2_9(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DecimalType2_9")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DecimalType2_9", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // [ EQUALS MisplacedDocumentation* JsonValue MisplacedDocumentation* ]
  static boolean DefaultValueAssignment(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultValueAssignment")) return false;
    DefaultValueAssignment_0(b, l + 1);
    return true;
  }

  // EQUALS MisplacedDocumentation* JsonValue MisplacedDocumentation*
  private static boolean DefaultValueAssignment_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultValueAssignment_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQUALS);
    r = r && DefaultValueAssignment_0_1(b, l + 1);
    r = r && JsonValue(b, l + 1);
    r = r && DefaultValueAssignment_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MisplacedDocumentation*
  private static boolean DefaultValueAssignment_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultValueAssignment_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DefaultValueAssignment_0_1", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean DefaultValueAssignment_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "DefaultValueAssignment_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "DefaultValueAssignment_0_3", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // DOC_COMMENT
  public static boolean Documentation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Documentation")) return false;
    if (!nextTokenIs(b, DOC_COMMENT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOC_COMMENT);
    exit_section_(b, m, DOCUMENTATION, r);
    return r;
  }

  /* ********************************************************** */
  // MisplacedDocumentation* EnumConstant MisplacedDocumentation* (COMMA MisplacedDocumentation* EnumConstant MisplacedDocumentation*)*
  public static boolean EnumBody(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ENUM_BODY, "<enum body>");
    r = EnumBody_0(b, l + 1);
    r = r && EnumConstant(b, l + 1);
    r = r && EnumBody_2(b, l + 1);
    r = r && EnumBody_3(b, l + 1);
    exit_section_(b, l, m, r, false, AvroIdlParser::recoverEnumBody);
    return r;
  }

  // MisplacedDocumentation*
  private static boolean EnumBody_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumBody_0", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean EnumBody_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumBody_2", c)) break;
    }
    return true;
  }

  // (COMMA MisplacedDocumentation* EnumConstant MisplacedDocumentation*)*
  private static boolean EnumBody_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!EnumBody_3_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumBody_3", c)) break;
    }
    return true;
  }

  // COMMA MisplacedDocumentation* EnumConstant MisplacedDocumentation*
  private static boolean EnumBody_3_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_3_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && EnumBody_3_0_1(b, l + 1);
    r = r && EnumConstant(b, l + 1);
    r = r && EnumBody_3_0_3(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // MisplacedDocumentation*
  private static boolean EnumBody_3_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_3_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumBody_3_0_1", c)) break;
    }
    return true;
  }

  // MisplacedDocumentation*
  private static boolean EnumBody_3_0_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "EnumBody_3_0_3")) return false;
    while (true) {
      int c = current_position_(b);
      if (!MisplacedDocumentation(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "EnumBody_3_0_3", c)) break;
    }
    return true;
  }
